# eventstreams

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: cli.rs
src/: lib.rs  types.rs
tests/: integration.rs
