[package]
name = "eventstreams"
description = "Client for Wikimedia's EventStream recent changes feed"
version = "0.3.1-pre"
authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://gitlab.com/legoktm/eventstreams"
readme = "README.md"
keywords = ["wikimedia", "eventstream", "mediawiki"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
futures = "0.3.15"
futures-util = "0.3.15"
surf-sse = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = {version = "1.0", features = ["full"]}
